
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8_t ;
struct nlmsghdr {scalar_t__ nlmsg_type; int nlmsg_len; } ;
struct inet_diag_msg {int dummy; } ;
typedef int recv_buf ;
typedef int pthread_t ;


 int AF_NETLINK ;
 int EXIT_FAILURE ;
 int EXIT_SUCCESS ;
 int NETLINK_INET_DIAG ;
 scalar_t__ NLMSG_DATA (struct nlmsghdr*) ;
 scalar_t__ NLMSG_DONE ;
 scalar_t__ NLMSG_ERROR ;
 int NLMSG_LENGTH (int) ;
 struct nlmsghdr* NLMSG_NEXT (struct nlmsghdr*,int) ;
 scalar_t__ NLMSG_OK (struct nlmsghdr*,int) ;
 int SOCKET_BUFFER_SIZE ;
 int SOCK_DGRAM ;
 int client_stop_flag ;
 int client_thread ;
 int fprintf (int ,char*) ;
 int parse_diag_msg (struct inet_diag_msg*,int) ;
 int perror (char*) ;
 int printf (char*) ;
 scalar_t__ pthread_create (int *,int *,int ,int *) ;
 scalar_t__ pthread_join (int ,int *) ;
 int recv (int,int *,int,int ) ;
 scalar_t__ send_diag_msg (int) ;
 int server_thread ;
 int servser_stop_flag ;
 int sleep (int) ;
 int socket (int ,int ,int ) ;
 int stderr ;

int main(int argc, char *argv[]){
    int nl_sock = 0, numbytes = 0, rtalen = 0;
    struct nlmsghdr *nlh;
    uint8_t recv_buf[SOCKET_BUFFER_SIZE];
    struct inet_diag_msg *diag_msg;
    pthread_t sctp_server;
    pthread_t sctp_client;


    if (pthread_create(&sctp_server, ((void*)0), server_thread, ((void*)0)))
        return EXIT_FAILURE;
    sleep(2);

    if (pthread_create(&sctp_client, ((void*)0), client_thread, ((void*)0)))
        return EXIT_FAILURE;
    sleep(2);


    if((nl_sock = socket(AF_NETLINK, SOCK_DGRAM, NETLINK_INET_DIAG)) == -1){
        perror("socket: ");
        return EXIT_FAILURE;
    }

    if(send_diag_msg(nl_sock) < 0){
        perror("sendmsg: ");
        return EXIT_FAILURE;
    }

    while(1){
        numbytes = recv(nl_sock, recv_buf, sizeof(recv_buf), 0);
        nlh = (struct nlmsghdr*) recv_buf;

        while(NLMSG_OK(nlh, numbytes)){
            if(nlh->nlmsg_type == NLMSG_DONE) {
                return EXIT_SUCCESS;
            }

            if(nlh->nlmsg_type == NLMSG_ERROR){
                fprintf(stderr, "Error in netlink message\n");
                return EXIT_FAILURE;
            }

            diag_msg = (struct inet_diag_msg*) NLMSG_DATA(nlh);
            rtalen = nlh->nlmsg_len - NLMSG_LENGTH(sizeof(*diag_msg));
            parse_diag_msg(diag_msg, rtalen);

            nlh = NLMSG_NEXT(nlh, numbytes);
        }
    }
    printf("loop next\n");


    client_stop_flag = 1;
    if (pthread_join(sctp_client, ((void*)0)))
        return EXIT_FAILURE;

    servser_stop_flag = 1;
    if (pthread_join(sctp_server, ((void*)0)))
        return EXIT_FAILURE;

    printf("end\n");
    return EXIT_SUCCESS;
}
